chore: Disable auto-deployment workflow
- Project transferred to client, no Vercel access
- Keep workflow file for portfolio/interview demonstration
- Can still be triggered manually if needed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
 name: Deploy to Production
 
 on:
-  push:
-    branches: [main]
-  workflow_dispatch:
+  # Disabled auto-deployment since project transferred to client
+  # Keep workflow for portfolio/interview demonstration
+  # push:
+  #   branches: [main]
+  workflow_dispatch:  # Manual trigger only
 
 concurrency:
   group: production-deployment
