chore: Disable auto Docker build workflow
- Project transferred to client, for portfolio/learning only
- Docker build workflow kept for demonstration
- Can be triggered manually if needed
- Prevents continuous build failures in Actions tab

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,11 +1,14 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches: [main]
-    tags:
-      - 'v*.*.*'
-  workflow_dispatch:
+  # Disabled auto-build since project transferred to client
+  # Keep workflow for portfolio/interview demonstration
+  # Can be triggered manually if needed
+  # push:
+  #   branches: [main]
+  # tags:
+  #   - 'v*.*.*'
+  workflow_dispatch:  # Manual trigger only
 
 env:
   REGISTRY: ghcr.io
